--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "boxen": "^2.1.0",
     "chalk": "^2.4.1",
     "common-tags": "^1.8.0",
-    "os-locale": "^3.0.1"
+    "os-locale": "^3.0.1",
+    "terminal-link": "^1.1.0"
   }
 }
